// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Eligendi illo perspiciatis magni repellendus voluptas in et cumque. Quo dolore non exercitationem hic officiis enim. Placeat et occaecati eveniet beatae sed. Dolorem fuga aut est corrupti.
 
Qui non inventore fuga excepturi at sit. Maxime rerum esse similique ipsam. Facilis tempora est.
 
Labore saepe magni vel neque rem nulla nulla. Et sapiente eius ut fuga mollitia velit. Deserunt et unde inventore ullam placeat autem. Sint sed voluptatem consectetur facilis facere distinctio consequatur iusto voluptas. Sint dolor officia est at repudiandae.
 
Qui minus debitis. Voluptatem et quia dicta quisquam. Odio cupiditate consequuntur. Officia ut aperiam ut velit pariatur temporibus expedita perferendis facilis. At voluptatem non repellat odio.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c6:first-child {
  margin-top: 0;
}

.c6:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c5:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c5 .c8 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c7 .c4 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Edit me
        <button
          className="c4 c5"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c6"
    >
      Pariatur molestiae libero consequuntur nisi voluptatum voluptatem beatae quidem. Pariatur illo qui quo et consequatur a et officia consequatur. Debitis molestiae voluptatem suscipit.
 
Quibusdam vel laborum asperiores nulla occaecati consequatur ipsum fugit architecto. Quis rerum quia a harum voluptatum. Ut doloribus quo non rerum voluptatem. Qui odit praesentium explicabo. Iusto dolor aut corrupti sunt quam voluptas. Aut voluptates quidem voluptatem cum.
 
Amet ea nobis delectus ex sed aut. Quia ad amet eum necessitatibus et qui. Enim qui alias. Tempora suscipit ratione. Sed nihil eveniet magni officiis dolor. Voluptatem rem quia dolorem voluptatibus dolores et commodi.
 
Veniam molestiae voluptatibus iure dolor. Consequatur aliquam aut rerum sint eum. Ullam velit porro qui consectetur fugit.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget initialEdit = true 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c8:first-child {
  margin-top: 0;
}

.c8:last-child {
  margin-bottom: 0;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c7:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c7 .c10 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c4 {
  max-width: 90%;
}

.c9 .c6 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            data-test="widget-header-input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="Edit me"
          />
        </div>
        <button
          className="c6 c7"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c8"
    >
      Quo libero maxime est. Et et nisi fuga consequatur quidem aut. Omnis et nostrum aut voluptatibus.
 
Voluptas cumque aliquam accusamus deserunt aut. Velit eum aut consequuntur corrupti et. Beatae alias corporis error quod dolores et. Tempore voluptatibus aut rerum cum.
 
Inventore incidunt animi quia quasi amet ex. Quisquam voluptatibus beatae repudiandae et ut vel dolor esse. Dolorum illum facilis atque ea officia necessitatibus. Voluptatem aspernatur veritatis sed qui consequatur ad id sunt. Magnam reprehenderit sit reprehenderit hic temporibus tenetur facilis odit qui. Est ut ea architecto dolores ipsam qui distinctio.
 
Eius similique molestiae. Est veniam animi quam maxime quas ut. Cumque qui non impedit eos accusamus dolorem. Voluptatem itaque quasi aut reiciendis commodi ut expedita.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.25em 0 0 1.25em;
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Exercitationem unde non. Molestias at blanditiis quisquam. Non voluptatem atque nemo et quis necessitatibus. Sunt qui delectus optio. Quasi molestiae ut vero.
 
Aut magni facere nemo beatae rem. Eligendi dignissimos rerum tempore exercitationem ducimus. Nihil magni soluta sint optio. Dolorum quia voluptatem asperiores omnis qui dolor. Et est ut quibusdam quia laborum reprehenderit est. Sed illum est laborum quia.
 
Molestiae accusantium aspernatur nihil fugit a. Voluptas adipisci recusandae qui nemo. Cum est est quos sed dicta dolorem. Ullam praesentium sed velit. Accusantium atque qui accusamus est. Sit unde nulla sit molestiae cumque et repellendus expedita.
 
Dolorem velit reprehenderit non non saepe ab. Quos accusamus officiis voluptates at. Quibusdam nobis quas eveniet qui. Corrupti debitis pariatur.
    </p>
  </div>
</div>
`;
